# clamav-signature-util

./: .gitignore  CHANGES.md  CONTRIBUTING.md  COPYING.txt  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  feature-level.txt  features.rs.save  filetypes.txt
.github/workflows/: docker-img.yml
src/: cmdline.rs  example.sig  feature.rs  filetype.rs  lib.rs  regexp.rs  sigbytes.rs  signature.rs  util.rs
src/cmdline/: main.rs  opt.rs  rest.rs
src/signature/: bodysig.rs  container_metadata.rs  container_metadata_sig.rs  digital_sig.rs  ext.rs  ext_sig.rs  false_positive_filehash.rs  filehash.rs  ftmagic.rs  hash.rs  intmask.rs  logical.rs  logical_sig.rs  mod.rs  pehash.rs  phishing.rs  phishing_sig.rs  sigtype.rs  targettype.rs
src/signature/bodysig/: altstr.rs  bsmatch.rs  char_class.rs  parse.rs  pattern.rs  pattern_modifier.rs
src/signature/bodysig/parse/: tests.rs
src/signature/container_metadata/: container_size.rs  container_type.rs
src/signature/container_metadata_sig/: container_size.rs  container_type.rs
src/signature/logical/: expression.rs  subsig.rs  targetdesc.rs
src/signature/logical/expression/: error.rs
src/signature/logical/subsig/: bytecmp.rs  macrosig.rs  pcre.rs
src/signature/logical/subsig/bytecmp/: byteopts.rs  compset.rs  offset.rs
src/signature/logical_sig/: expression.rs  subsig.rs  targetdesc.rs
src/signature/logical_sig/expression/: error.rs
src/signature/logical_sig/subsig/: bytecmp.rs  fuzzy_img.rs  macrosig.rs  pcre.rs
src/signature/logical_sig/subsig/bytecmp/: byteopts.rs  compset.rs  offset.rs
test-data/: logical-exprs.txt
