[package]
edition = "2021"
name = "clam-sigutil"
version = "1.1.0"

[features]
default = []
validate_regex = ["regex"]

[dependencies]
anyhow = "1"
downcast-rs = "1"
enum-variants-strings = "0.2"
enumflags2 = "0.7"
hex = "0.4"
hex-literal = "0.4"
itertools = "0.12"
num-derive = "0.4"
num-traits = "0.2"
structopt = "0.3"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1"
tinyvec = "1.6"
url = "2"

# Optional crates
regex = { version = "1", optional = true }

[[bin]]
name = "clam-sigutil"
path = "src/cmdline.rs"

[build-dependencies]
change-case = "0.2"

[lints.clippy]
all = "warn"
pedantic = "warn"

missing_panics_doc = "allow"
missing_errors_doc = "allow"
doc_markdown = "allow"
