[package]
authors = ["The ClamAV Team <clamav-bugs@external.cisco.com>"]
edition = "2021"
name = "clam-sigutil"
version = "1.2.2"

[features]
default = []
validate_regex = ["regex"]

[dependencies]
anyhow = "1"
downcast-rs = "2"
enum-variants-strings = "0.3"
enumflags2 = "0.7"
hex = "0.4"
hex-literal = "1"
itertools = "0.14"
num-derive = "0.4"
num-traits = "0.2"
openssl = "0.10"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tinyvec = { version = "1.8", features = ["alloc"] }
url = "2"
log = "0.4"
humantime = "2.1"
flexi_logger = "0.30"
clap = { version = "4.5", features = ["derive"] }

# Optional crates
regex = { version = "1", optional = true }

[[bin]]
name = "clam-sigutil"
path = "src/cmdline.rs"

[lib]
name = "clam_sigutil"
path = "src/lib.rs"

[build-dependencies]
change-case = "0.2"

[lints.clippy]
all = "warn"
pedantic = "warn"

missing_panics_doc = "allow"
missing_errors_doc = "allow"
doc_markdown = "allow"
